chore: site title and footer spacing mobile fix

--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -2,4 +2,5 @@
   font-size: 80%;
   color: #aaa;
   margin-top: 3rem;
+  margin-bottom: 3rem;
 }
